crates/xlate/tests/snapshots/golden_matrix__tools_choice_named__gpt-4o-mini__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "What time is it in Tokyo?"
        }
      ]
    }
  ],
  "tools": [
    {
      "type": "function",
      "name": "get_weather",
      "description": "Get weather.",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "city": {
            "type": "string"
          }
        },
        "required": [
          "city"
        ],
        "type": "object"
      }
    },
    {
      "type": "function",
      "name": "get_time",
      "description": "Get time.",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "tz": {
            "type": "string"
          }
        },
        "required": [
          "tz"
        ],
        "type": "object"
      }
    }
  ],
  "tool_choice": {
    "type": "function",
    "name": "get_time"
  },
  "max_output_tokens": 128
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
